<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listView"
        android:layout_below="@+id/ClubSearchL">
        <ListView
            android:id="@+id/clubList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loadingCircle"
        android:gravity="center" >

        <ProgressBar
            android:id="@+id/loadingcircleInner"
            android:layout_width="74dp"
            android:layout_height="71dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:indeterminateTintMode="src_atop" />
    </RelativeLayout>
    <LinearLayout
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/ClubSearchL">

        <EditText
            android:textCursorDrawable="@null"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_club_name"
            android:cursorVisible="true"
            android:id="@+id/ClubSearch"/>
    </LinearLayout>
</RelativeLayout>