...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Spinner2"
        android:layout_above="@id/dater"
        tools:ignore="NotSibling">
        <Spinner
            android:id="@+id/pitchSpinner"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="96dp"
            android:entries="@array/venues"
...
        android:layout_centerHorizontal="true"
        android:layout_below="@id/dater"
        android:id="@+id/ButtonAtBottom"
        tools:ignore="NotSibling"
        android:paddingTop="40dp">
        <Button
            android:id="@+id/ChallengeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenge"
            android:background="@drawable/editbutton"
            android:onClick="CreatChallengeCloseScreen"/>
    </LinearLayout>
...
