...
    <string name="join_event">Join event</string>
    <string name="Add">Add</string>
    <string name="send_email">Send email</string>
    <string name="pending">pending</string>
    <string-array name="divisions">
        <item>Select a Division</item>
        <item>Division 1</item>
        <item>Division 2</item>
        <item>Division 3</item>
        <item>Division 4</item>
    </string-array>
    <string-array name="venues">
        <item>Grass Pitch</item>
...
