<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/CalendarText"
        android:layout_above="@id/CalendarViewLinear">
        <TextView
            android:id="@+id/MyDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_a_date"
            android:textAlignment="center"
            android:textSize="28sp"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/CalendarViewLinear">
        <CalendarView
            android:id="@+id/CalendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
