...
            android:layout_below="@+id/two">
        <Button

                    android:text="@string/join_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/joinButton"
                    android:background="@drawable/editbutton"/>
        </LinearLayout>

</RelativeLayout>
